Bug 1701928 - Selection scrolling should not ignore scroll-{margin,padding}. r=hiro,masayuki

Differential Revision: https://phabricator.services.mozilla.com/D110440