layout/base/PresShellForwards.h
@@ -137,7 +137,6 @@ enum class ScrollFlags {
   ScrollSmooth = 1 << 3,
   ScrollSmoothAuto = 1 << 4,
   ScrollSnap = 1 << 5,
-  IgnoreMarginAndPadding = 1 << 6,
   // ScrollOverflowHidden | ScrollNoParentFrames
   AnchorScrollFlags = (1 << 1) | (1 << 2),
   ALL_BITS = (1 << 7) - 1,
